# parser_hh

./: .gitignore  README.md  config.py  db_manager.py  main.py  pyproject.toml  queries.sql
hh/: hh_api.py  utils.py  vacancy.py
